infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
    # How every pod should behave
      containers:
        - name: client
          image: tszemzo/client:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  selector:
    app: client
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
