infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata: 
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
  # This name is not very important
  # Default port that mongo uses for listen
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
