infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: tszemzo/orders:latest
          # List of env variables of our container
---
apiVersion: v1
kind: Service
metadata: 
  name: orders-srv
spec:
  selector:
    app: orders
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
