infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata: 
  name: orders-mongo-srv
spec:
  selector:
    app: orders-mongo
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
  # This name is not very important
  # Default port that mongo uses for listen
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
