infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: tszemzo/payments:latest
          # List of env variables of our container
---
apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec:
  selector:
    app: payments
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
