infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  # This two parts says which pod it should try to manage
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: tszemzo/tickets:latest
          # List of env variables of our container
---
apiVersion: v1
kind: Service
metadata: 
  name: tickets-srv
spec:
  selector:
    app: tickets
  # ClusterIP is the default, not necessary to explicit it
  type: ClusterIP
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
